--- a/signUpUser.html
+++ b/signUpUser.html
@@ -16,45 +16,52 @@
 </head>
 
 <body>
-
-    <header class="log-in d-flex align-items-center justify-content-center">
-        <h1 class="josefinsans-normal-black-30px">Registrarme</h1>
-        <a href="logInUser.html" class="registrarme josefinsans-normal-chetwode-blue-16px">Ingresar</a>
-    </header>
-
     <main>
-        <form action="" method="" class="group-form" id="signup-form">
-            <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
-                <li>
-                    <input type="name"
-                    class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                    placeholder="Nombre de usuario" id="username">
-                    <br>
-                    <input type="name"
-                    class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                    placeholder="Nombre" id="first_name">
-                    <br>
-                    <input type="name"
-                    class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                    placeholder="Apellido" id="last_name">
-                    <br>
-                    <input type="email"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Correo" id="email">
-                    <br>
-                    <input type="password"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Contraseña" id="password">
-                    <br>
-                    <input type="password"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Confirmar contraseña" id="password-confirmation">
-                        <p id='message-form'></p>
-                </li>
-                <br>
-                <input type="submit" value="Registrar" class="button-p josefinsans-normal-white-20px button-primary">
-            </ul>
-        </form>
+        <div class="sign-up-form">
+            <div class="sign-up-top">
+                <div class="close">
+                    <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
+                </div>
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-10 col-10 sign-up-body">
+                <h1 class="title josefinsans-normal-black-30px text-center pt-5 pb-3">Registrarme</h1>
+                <a href="logInUser.html" class="josefinsans-normal-chetwode-blue-16px">Ingresar</a>
+                <div class="d-flex justify-content-center align-content-center align-items-center">
+                    <form action="" method="" class="pt-5" id="signup-form">
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <input type="name"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Usuario" id="username">
+                            <br>
+                            <input type="name"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Nombre" id="first_name">
+                            <br>
+                            <input type="name"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Apellido" id="last_name">
+                            <br>
+                            <input type="email"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Correo" id="email">
+                            <br>
+                            <input type="password"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Contraseña" id="password">
+                            <br>
+                            <input type="password"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Confirmar contraseña" id="password-confirmation">
+                                <p id='message-form'></p>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <input type="submit" value="Registrar"
+                                class="button-p josefinsans-normal-white-20px button-primary">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
