--- a/formShelter.html
+++ b/formShelter.html
@@ -30,130 +30,141 @@
     </header>
 
     <main>
-        <div class="top-background">
-            <div class="rectangle-background container-fluid"></div>
-            <div class="close">
-                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
-            </div>
-        </div>
         <div class="shelter-form">
-            <h1 class="title josefinsans-normal-black-30px text-center py-5">Completa el perfil <br />de tu refugio</h1>
-            <div class="d-flex justify-content-center align-content-center align-items-center">
-                <form action="" method="" id="form-shelter">
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputNameShelter"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se llama tu
-                            refugio?
-                        </label>
-                        <input type="organization"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Nombre del refugio" id="organization-name">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputName"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es el nombre
-                            del
-                            representante?
-                        </label>
-                        <input type="given-name"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Nombre" id="first-name">
-                        <br>
-                        <input type="family-name"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Apellidos" id="last-name">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputPhone"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se les puede
-                            contactar?
-                        </label>
-                        <input type="tel"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Teléfono" id="phone">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputAdress"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde está
-                            ubicado el
-                            refugio?
-                        </label>
-                        <input type="street-address"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Calle y número" id="street">
-                        <br>
-                        <input type="address-line1"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Colonia" id="neighbourhood">
-                        <br>
-                        <input type="address-line2"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Municipio/Delegación" id="city">
-                        <br>
-                        <input type="address-line3"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Estado" id="state">
-                        <br>
-                        <input type="postal-code"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Código postal" id="zip-code">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputlink"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Si
-                            tienes un link de la página web, por favor ingrésalo:
-                        </label>
-                        <input type="url"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Link" id="web-address">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputPayPal"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Ingresa el link
-                            del
-                            PayPal donde puedan donar los adoptantes.
-                        </label>
-                        <input type="url"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="PayPal" id="donation-link">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputDescription"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Cuéntanos sobre
-                            tu
-                            refugio.
-                        </label>
-                        <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue" id="story">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputDescription"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Sube el logo de tu refugio.
-                        </label>
-                        <input type="file"
-                            class="input-picture josefinsans-normal-chetwode-blue-16px" id="image" type="file" accept="image/*">
-                    </div>
-                    <br>
-                    <div>
-                        <div class="d-flex flex-row align-items-center">
-                            <input type="checkbox" class="" id="checkbox-form">
-                            <label for="inputText12" class="josefinsans-normal-chetwode-blue-20px px-3">He leído y acepto los
-                                términos
-                                y condiciones de uso.
+            <div class="shelter-top">
+                <div class="close">
+                    <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
+                </div>
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-10 col-10 shelter-body">
+                <h1 class="title josefinsans-normal-black-30px text-center py-5">Completa el perfil <br />de tu refugio
+                </h1>
+                <div class="d-flex justify-content-center align-content-center align-items-center">
+                    <form action="" method="" id="form-shelter">
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputNameShelter"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se llama
+                                tu
+                                refugio?
                             </label>
+                            <input type="organization"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Nombre del refugio" id="organization-name">
                         </div>
-                        <div class="d-flex justify-content-center">
-                            <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
+                        <br>
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputName"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es el
+                                nombre
+                                del
+                                representante?
+                            </label>
+                            <input type="given-name"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Nombre" id="first-name">
+                            <br>
+                            <input type="family-name"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Apellidos" id="last-name">
                         </div>
-                    </div>
-                </form>
+                        <br>
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputPhone"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se les
+                                puede
+                                contactar?
+                            </label>
+                            <input type="tel"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Teléfono" id="phone">
+                        </div>
+                        <br>
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputAdress"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde está
+                                ubicado el
+                                refugio?
+                            </label>
+                            <input type="street-address"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Calle y número" id="street">
+                            <br>
+                            <input type="address-line1"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Colonia" id="neighbourhood">
+                            <br>
+                            <input type="address-line2"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Municipio/Delegación" id="city">
+                            <br>
+                            <input type="address-line3"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Estado" id="state">
+                            <br>
+                            <input type="postal-code"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Código postal" id="zip-code">
+                        </div>
+                        <br>
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputlink"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Si
+                                tienes un link de la página web, por favor ingrésalo:
+                            </label>
+                            <input type="url"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Link" id="web-address">
+                        </div>
+                        <br>
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputPayPal"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Ingresa el
+                                link
+                                del
+                                PayPal donde puedan donar los adoptantes.
+                            </label>
+                            <input type="url"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="PayPal" id="donation-link">
+                        </div>
+                        <br>
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputDescription"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Cuéntanos
+                                sobre
+                                tu
+                                refugio.
+                            </label>
+                            <input type="text"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                id="story">
+                        </div>
+                        <br>
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputDescription"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Sube el logo
+                                de tu refugio.
+                            </label>
+                            <input type="file" class="input-picture josefinsans-normal-chetwode-blue-16px" id="image"
+                                type="file" accept="image/*">
+                        </div>
+                        <br>
+                        <div>
+                            <div class="d-flex flex-row align-items-center">
+                                <input type="checkbox" class="" id="checkbox-form">
+                                <label for="inputText12" class="josefinsans-normal-chetwode-blue-20px px-3">He leído y
+                                    acepto los
+                                    términos
+                                    y condiciones de uso.
+                                </label>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <input type="submit" value="Ingresar"
+                                    class="button-p josefinsans-normal-white-20px button-primary">
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </main>
