--- a/logInShelter.html
+++ b/logInShelter.html
@@ -16,27 +16,36 @@
 </head>
 
 <body>
-    <header class=" log-in d-flex align-items-center justify-content-center">
-        <h1 class="josefinsans-normal-black-30px">Ingresar como </br>refugio</h1>
-        <a href="signUpUser.html" class="registrarme josefinsans-normal-chetwode-blue-16px">Registrar</a>
-    </header>
-
     <main>
-        <form action="" method="" class="group-form" id="login-shelter-form">
-            <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
-                <li>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Username" id="username">
-                    <br>
-                    <input type="password"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Contraseña" id="password">
-                </li>
-                <br>
-                <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
-            </ul>
-        </form>
+        <div class="log-in-form">
+            <div class="log-in-top">
+                <div class="close">
+                    <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
+                </div>
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-10 col-10 log-in-body">
+                <h1 class="title josefinsans-normal-black-30px text-center pt-5 pb-3">Ingresar como </br>refugio</h1>
+                <a href="signUpShelter.html" class="josefinsans-normal-chetwode-blue-16px">Registrar</a>
+                <div class="d-flex justify-content-center align-content-center align-items-center">
+                    <form action="" method="" class="pt-5" id="login-shelter-form">
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <input type="text"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Usuario" id="username">
+                            <br>
+                            <input type="password"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Contraseña" id="password">
+                            <br>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <input type="submit" value="Ingresar"
+                                class="button-p josefinsans-normal-white-20px button-primary">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
