--- a/updateUser.html
+++ b/updateUser.html
@@ -60,96 +60,102 @@
     </nav>
 
     <main>
-        <div class="top-background">
-            <div class="rectangle-background container-fluid"></div>
-            <div class="close">
-                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
-            </div>
-        </div>
         <div class="user-form">
-            <h1 class="title josefinsans-normal-black-30px text-center py-5">Actualizar mi perfil</h1>
-            <div class="d-flex justify-content-center align-content-center align-items-center">
-                <form action="" method="">
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputName"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo te llamas?
-                        </label>
-                        <input type="given-name"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Nombre">
-                        <br>
-                        <input type="family-name"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Apellidos">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputBirthDate"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuándo naciste?
-                        </label>
-                        <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue datepicker"
-                            placeholder="Fecha de nacimiento">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputPhone"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo te podemos
-                            contactar?
-                        </label>
-                        <input type="tel"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Teléfono">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputAdress"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde vives?
-                        </label>
-                        <input type="street-address"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Calle y número">
-                        <br>
-                        <input type="address-line1"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Colonia">
-                        <br>
-                        <input type="address-line2"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Municipio/Delegación">
-                        <br>
-                        <input type="address-line3"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Estado">
-                        <br>
-                        <input type="postal-code"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                            placeholder="Código postal">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputDescription"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> ¿Por qué deseas
-                            adoptar?
-                        </label>
-                        <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                    </div>
-                    <br>
-                    <div class="file-upload">
-                        <label for="inputDescription"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Cambiar tu foto de perfil.
-                        </label>
-                        <input type="file" class="input-picture josefinsans-normal-chetwode-blue-16px" id="image"
-                            type="file" accept="image/*">
-                    </div>
-                    <div>
-                        <div class="d-flex justify-content-center">
-                            <input type="submit" value="Actualizar"
-                                class="button-p josefinsans-normal-white-20px button-primary">
+            <div class="user-top">
+                <div class="close">
+                    <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
+                </div>
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-10 col-10 user-body">
+                <h1 class="title josefinsans-normal-black-30px text-center py-5">Actualizar mi perfil</h1>
+                <div class="d-flex justify-content-center align-content-center align-items-center">
+                    <form action="" method="">
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputName"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo te
+                                llamas?
+                            </label>
+                            <input type="given-name"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Nombre">
+                            <br>
+                            <input type="family-name"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Apellidos">
                         </div>
-                    </div>
-                </form>
+                        <br>
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputBirthDate"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuándo
+                                naciste?
+                            </label>
+                            <input type="text"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue datepicker"
+                                placeholder="Fecha de nacimiento">
+                        </div>
+                        <br>
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputPhone"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo te
+                                podemos
+                                contactar?
+                            </label>
+                            <input type="tel"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Teléfono">
+                        </div>
+                        <br>
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputAdress"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde vives?
+                            </label>
+                            <input type="street-address"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Calle y número">
+                            <br>
+                            <input type="address-line1"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Colonia">
+                            <br>
+                            <input type="address-line2"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Municipio/Delegación">
+                            <br>
+                            <input type="address-line3"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Estado">
+                            <br>
+                            <input type="postal-code"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                                placeholder="Código postal">
+                        </div>
+                        <br>
+                        <div class="base-form d-flex flex-column justify-content-center">
+                            <label for="inputDescription"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> ¿Por qué
+                                deseas
+                                adoptar?
+                            </label>
+                            <input type="text"
+                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                        </div>
+                        <br>
+                        <div class="file-upload">
+                            <label for="inputDescription"
+                                class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Cambiar tu
+                                foto de perfil.
+                            </label>
+                            <input type="file" class="input-picture josefinsans-normal-chetwode-blue-16px" id="image"
+                                type="file" accept="image/*">
+                        </div>
+                        <div>
+                            <div class="d-flex justify-content-center">
+                                <input type="submit" value="Actualizar"
+                                    class="button-p josefinsans-normal-white-20px button-primary">
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </main>
