Updated css in forms, log in and sign up

--- a/logInUser.html
+++ b/logInUser.html
@@ -23,9 +23,9 @@
                     <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
                 </div>
             </div>
-            <div class="col-lg-8 col-md-8 col-sm-10 col-10 log-in-body">
+            <div class="col-9 col-lg-6 col-md-7 col-sm-8 log-in-body">
                 <h1 class="title josefinsans-normal-black-30px text-center pt-5 pb-3">Ingresar</h1>
-                <a href="signUpUser.html" class="josefinsans-normal-chetwode-blue-16px pe-5">Registrarme</a>
+                <a href="signUpUser.html" class="josefinsans-normal-chetwode-blue-16px">Registrarme</a>
                 <div class="d-flex justify-content-center align-content-center align-items-center">
                     <form action="" method="" class="pt-5" id="login-form">
                         <div class="base-form d-flex flex-column justify-content-center">
