Updated profiles css

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
         <div class="finder quicksand-medium-white-14px d-flex justify-content-around">
                 <div class="text-center">
                     <a href="searchDog.html">
-                        <span class="find">Buscar un</span>
+                        <span class="find">Adoptar un</span>
                         <br>
                         <span class="pet">perro</span>
                     </div>
                     </a>
                 <div class="text-center find-cat">
                     <a href="searchCat.html">
-                        <span class="find">Buscar un</span>
+                        <span class="find">Adoptar un</span>
                         <br>
                         <span class="pet">gato</span>
                     </a>
@@ -85,7 +85,7 @@
             <h1 class="d-flex flex-wrap justify-content-center josefinsans-semi-bold-chetwode-blue-24px pb-4">
                 Mascotas en adopción
             </h1>
-            <div class="  owl-carousel owl-theme justify-content-center mx-4 pet-carousel">
+            <div class="owl-carousel owl-theme justify-content-center mx-4 pet-carousel">
                 <!-- <div class="card" style="width: 20rem;">
                     <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
                         <path
