--- a/profileUser.html
+++ b/profileUser.html
@@ -64,17 +64,17 @@
     </nav>
     
     <main>
-        <div class="detail-user">
+        <div class="detail-user d-flex justify-content-center">
             <div class="detail-top pt-1">
             </div>
-            <div class="user-text rectangle-background">
+            <div class="user-text rectangle-background col-lg-6 col-md-7 col-sm-9 col-10">
                 <div class="detail-top pt-1">
                     <img src="assets/img/userImage.jpg" alt="" class="user-image" style="width: 15em;">
                 </div>
                 <div class="info-user d-flex flex-column">
                     <h2 class="user-name josefinsans-normal-black-30px d-flex justify-content-center pb-3"></h2>
                     <div class="d-flex flex-column">
-                        <div class="main-info d-flex flex-wrap justify-content-between px-5">
+                        <div class="main-info d-flex flex-wrap justify-content-around pe-5">
                             <div class="age">
                                 <p class="josefinsans-chetwode-blue-18px">EDAD</p>
                                 <p class="user-age"></p>
@@ -88,7 +88,7 @@
                                 <p class="location-user"></p>
                             </div>
                         </div>
-                        <div class="secondary-info d-flex flex-wrap justify-content-center px-5">
+                        <div class="secondary-info d-flex flex-wrap justify-content-center pe-5">
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
                                 <p class="story-user"></p>
