--- a/profileShelter.html
+++ b/profileShelter.html
@@ -64,10 +64,10 @@
     </nav>
 
     <main>
-        <div class="detail-shelter">
+        <div class="detail-shelter d-flex justify-content-center">
             <div class="detail-top pt-1">
             </div>
-            <div class="shelter-text rectangle-background">
+            <div class="shelter-text rectangle-background col-lg-6 col-md-7 col-sm-9 col-10">
                 <div class="detail-top pt-1">
                     <img src="" alt="" class="shelter-image" style="width: 15em;">
                 </div>
