--- a/profileUserEdit.html
+++ b/profileUserEdit.html
@@ -60,10 +60,10 @@
     </nav>
 
     <main>
-        <div class="detail-user">
+        <div class="detail-user d-flex justify-content-center">
             <div class="detail-top pt-1">
             </div>
-            <div class="user-text rectangle-background">
+            <div class="user-text rectangle-background col-lg-6 col-md-7 col-sm-9 col-10">
                 <div class="detail-top pt-1">
                     <img src="assets/img/userImage.jpg" alt="" class="user-image" style="width: 15em;">
                 </div>
@@ -73,7 +73,7 @@
                         <img src="assets/svg/edit.svg" alt="" class="edit pb-4"  style="width: 2em;">
                     </a>
                     <div class="d-flex flex-column">
-                        <div class="main-info d-flex flex-wrap justify-content-between px-5">
+                        <div class="main-info d-flex flex-wrap justify-content-around px-4">
                             <div class="age">
                                 <p class="josefinsans-chetwode-blue-18px">EDAD</p>
                                 <p>27 años</p>
@@ -87,7 +87,7 @@
                                 <p>Coyoacán, 04000, CDMX.</p>
                             </div>
                         </div>
-                        <div class="secondary-info d-flex flex-wrap justify-content-center px-5">
+                        <div class="secondary-info d-flex flex-wrap justify-content-center px-4 px-lg-5">
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
                                 <p>Soy amante de los animales, busco un gato con quien compartir mi vida.</p>
