--- a/createPet.html
+++ b/createPet.html
@@ -69,7 +69,7 @@
                     <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
                 </div>
             </div>
-            <div class="col-lg-6 col-md-8 col-sm-10 col-10 pet-body">
+            <div class="col-12 col-lg-5 col-md-6 col-sm-7 col-xl-5 col-xxl-3 pet-body">
                 <h1 class="title josefinsans-normal-black-30px text-center py-5">Dar de alta <br />nueva mascota</h1>
                 <div class="d-flex justify-content-center align-content-center align-items-center">
                     <form action="" method="" id="pet-form">
