--- a/detailPet.html
+++ b/detailPet.html
@@ -64,7 +64,7 @@
         <div class="detail-pet d-flex justify-content-center">
             <div class="detail-top pt-1">
             </div>
-            <div class="pet-text rectangle-background col-lg-6 col-md-7 col-sm-9 col-10">
+            <div class="pet-text rectangle-background col-lg-6 col-md-7 col-sm-9 col-12">
                 <div class="detail-top pt-1">
                     <img src="assets/img/userImage.jpg" alt="" class="pet-image" style="width: 25em;">
                 </div>
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center pb-5">
-                    <div class=" adopt-form user-actions d-inline-flex">
+                    <div class=" adopt-form user-actions d-lg-inline-flex text-center">
                         <form action="https://www.paypal.com/donate" method="post" target="_top"
                             class="button-donation">
                             <input type="hidden" name="business" value="paw.chontli@gmail.com" />
