--- a/updateShelter.html
+++ b/updateShelter.html
@@ -69,7 +69,7 @@
                     <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
                 </div>
             </div>
-            <div class="col-lg-6 col-md-8 col-sm-10 col-10 shelter-body">
+            <div class="col-12 col-lg-5 col-md-6 col-sm-7 col-xl-5 col-xxl-3 shelter-body">
                 <h1 class="title josefinsans-normal-black-30px text-center py-5">Actualizar el perfil <br />de mi
                     refugio
                 </h1>
