--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
                 </div> -->               
             </div>
-            <div class="shelter-register text-center container-fluid">
+            <div class="shelter-register text-center col-12 col-xxl-6 col-xl-7 col-lg-8 col-md-8 col-sm-10">
                 <h1 class="josefinsans-normal-white-30px">¿Tienes un refugio?</h1>
                 <div class="actions">
                     <a href="signUpShelter.html">
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <div class="donations text-center container-fluid">
+            <div class="donations text-center col-12 col-xxl-6 col-xl-7 col-lg-8 col-md-8 col-sm-10 px-3">
                 <h1 class="josefinsans-normal-white-30px">
                     Los refugios necesitan tu ayuda
                 </h1>
@@ -160,16 +160,17 @@
                     Con tu ayuda más y más perros y gatos comerán hoy.
                 </p>
                 <div>
-                    <form action="https://www.paypal.com/donate" method="post" target="_top" class="button-donation">
-                        <input type="hidden" name="business" value="paw.chonti@gmail.com" />
-                        <input type="hidden" name="item_name" value="Pawchontli" />
-                        <input type="hidden" name="currency_code" value="MXN" />
-                        <input type="image" src="assets/svg/button-donation.svg" border="0" name="submit"
-                            title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"
-                            style="width: 20em;" />
-                        <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
-                            height="1" />
-                    </form>
+                    <form action="https://www.paypal.com/donate" method="post" target="_top"
+                    class="button-donation">
+                    <input type="hidden" name="business" value="paw.chontli@gmail.com" />
+                    <input type="hidden" name="item_name" value="Pawchontli" />
+                    <input type="hidden" name="currency_code" value="MXN" />
+                    <input type="image" src="assets/svg/button-donation.svg" border="0" name="submit style"
+                        title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"
+                        style="width: 20em;" />
+                    <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
+                        height="1" />
+                </form>
                 </div>
             </div>
         </div>
@@ -196,10 +197,10 @@
             </ul>
             <ul>
                 <li>
-                    <a href="">paw.chontli@gmail.com</a>
+                    paw.chontli@gmail.com
                 </li>
                 <li>
-                    <a href="">55-12-32-34-14</a>
+                    55-12-32-34-14
                 </li>
             </ul>
         </div>
@@ -230,31 +231,6 @@
     </script>
     <script src="js/main.js"></script>
     <script src="js/index.js"></script>
-    <script>
-        $('.owl-carousel').owlCarousel({
-            loop: false,
-            margin: 30,
-            nav: true,
-            autoWidth: true,
-            stagePadding: 100,
-            responsiveClass: true,
-            responsive: {
-                0: {
-                    items: 1,
-                    nav: true
-                },
-                600: {
-                    items: 2,
-                    nav: false
-                },
-                1000: {
-                    items: 4,
-                    nav: true,
-                    loop: false
-                }
-            }
-        })
-    </script>
 </body>
 
 </html>
