--- a/logInUser.html
+++ b/logInUser.html
@@ -23,7 +23,7 @@
                     <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
                 </div>
             </div>
-            <div class="col-9 col-lg-6 col-md-7 col-sm-8 log-in-body">
+            <div class="col-12 col-lg-5 col-md-6 col-sm-7 col-xl-4 col-xxl-3 log-in-body">
                 <h1 class="title josefinsans-normal-black-30px text-center pt-5 pb-3">Ingresar</h1>
                 <a href="signUpUser.html" class="josefinsans-normal-chetwode-blue-16px">Registrarme</a>
                 <div class="d-flex justify-content-center align-content-center align-items-center">
@@ -38,9 +38,9 @@
                                 placeholder="Contraseña" id="password">
                             <br>
                         </div>
-                        <div class="d-flex justify-content-center">
+                        <div class="d-flex justify-content-center text-center">
                             <input type="submit" value="Ingresar"
-                                class="button-p josefinsans-normal-white-20px button-primary">
+                                class="button-p josefinsans-normal-white-20px button-primary text">
                         </div>
                     </form>
                 </div>
