--- a/searchPet.html
+++ b/searchPet.html
@@ -65,28 +65,66 @@
                 <h2 class="josefinsans-normal-white-30px text-center py-4">Buscar una mascota</h2>
             </div>
         </div>
-        <div class="filter-options">
+        <div class="filter-options d-flex flex-column">
             <div class="d-flex flex-row align-items-center justify-content-center py-4">
-                <a href="">
-                    <button id="toggle-filter" class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">
-                        <img src="assets/svg/filter.svg" alt="" style="width: 3em;">
-                        Filtrar
-                    </button>
-                </a>
-                <a href="">
-                    <button class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">Ordenar
-                        por</button>
-                </a>
+                <button id="toggle-filter"
+                    class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">
+                    <img src="assets/svg/filter.svg" alt="" style="width: 3em;">
+                    Filtrar
+                </button>
+                <button class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">Ordenar
+                    por</button>
             </div>
-            <div class="d-flex flew-row justify-content-center align-items-center">
+            <div
+                class="container-filter d-flex justify-content-center flex-column rectangle-background col-6 px-4 py-4">
+                <div class="flex-column text-center">
+                    <label class="switch">
+                        <input type="checkbox" unchecked>
+                        <span></span>
+                        Perro
+                    </label>
+                    <br>
+                    <label class="switch">
+                        <input type="checkbox" unchecked>
+                        <span></span>
+                        Gato
+                    </label>
+                </div>
+                <br>
+                <div class="d-flex flex-column justify-content-center">
+                    <article class="filter-group">
+                        <header class="card-header"> <a href="#" data-toggle="collapse" data-target="#collapse_aside3" data-abc="true" aria-expanded="false" class="collapsed"> <i class="icon-control fa fa-chevron-down"></i>
+                                <h6 class="title">Size </h6>
+                            </a> </header>
+                        <div class="filter-content collapse" id="collapse_aside3">
+                            <div class="card-body"> <label class="checkbox-btn"> <input type="checkbox"> <span class="btn btn-light"> XS </span> </label> <label class="checkbox-btn"> <input type="checkbox"> <span class="btn btn-light"> SM </span> </label> <label class="checkbox-btn"> <input type="checkbox"> <span class="btn btn-light"> LG </span> </label> <label class="checkbox-btn"> <input type="checkbox"> <span class="btn btn-light"> XXL </span> </label> <label class="checkbox-btn"> <input type="checkbox"> <span class="btn btn-light"> XXXL </span> </label> </div>
+                        </div>
+                    </article>
+                    <article class="filter-group">
+                        <header class="card-header"> <a href="#" data-toggle="collapse" data-target="#collapse_aside4" data-abc="true" class="collapsed" aria-expanded="false"> <i class="icon-control fa fa-chevron-down"></i>
+                                <h6 class="title">Rating </h6>
+                            </a> </header>
+                        <div class="filter-content collapse" id="collapse_aside4">
+                            <div class="card-body"> <label class="custom-control"> <input type="checkbox" checked="" class="custom-control-input">
+                                    <div class="custom-control-label">Better </div>
+                                </label> <label class="custom-control"> <input type="checkbox" checked="" class="custom-control-input">
+                                    <div class="custom-control-label">Best </div>
+                                </label> <label class="custom-control"> <input type="checkbox" checked="" class="custom-control-input">
+                                    <div class="custom-control-label">Good</div>
+                                </label> <label class="custom-control"> <input type="checkbox" checked="" class="custom-control-input">
+                                    <div class="custom-control-label">Not good</div>
+                                </label> </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+            <!-- <div class="d-flex flew-row justify-content-center align-items-center">
                 <div class="pet-tag">
                     <p class="text-tag josefinsans-normal-white-16px">Cachorros</p>
                     <img src="assets/svg/delete.svg" alt="" style="height: 1em; width: 1em;">
                 </div>
-                <a href="">
                     <button class="delete-all">Borrar todos</button>
-                </a>
-            </div>
+            </div> -->
         </div>
         <div class="search-pet d-flex flex-wrap pt-1">
             <div class="card" style="width: 20rem;">
@@ -120,7 +158,7 @@
             </div>
         </div>
 
-        
+
     </main>
 
     <footer text-center>
