--- a/signUpUser.html
+++ b/signUpUser.html
@@ -23,7 +23,7 @@
                     <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
                 </div>
             </div>
-            <div class="col-9 col-lg-6 col-md-7 col-sm-8 sign-up-body">
+            <div class="col-12 col-lg-5 col-md-6 col-sm-7 col-xl-4 col-xxl-3 sign-up-body">
                 <h1 class="title josefinsans-normal-black-30px text-center pt-5 pb-3">Registrarme</h1>
                 <a href="logInUser.html" class="josefinsans-normal-chetwode-blue-16px">Ingresar</a>
                 <div class="d-flex justify-content-center align-content-center align-items-center">
