form shelter form user

--- a/profileUser.html
+++ b/profileUser.html
@@ -75,10 +75,10 @@
                     <h2 class="user-name josefinsans-normal-black-30px d-flex justify-content-center pb-3"></h2>
                     <div class="d-flex flex-column">
                         <div class="main-info d-flex flex-wrap justify-content-between px-5">
-                            <div class="age">
+                            <!-- <div class="age">
                                 <p class="josefinsans-chetwode-blue-18px">EDAD</p>
                                 <p class="user-age"></p>
-                            </div>
+                            </div> -->
                             <div class="ocupation">
                                 <p class="josefinsans-chetwode-blue-18px">OCUPACIÓN</p>
                                 <p class="occupation-user"></p>
