--- a/formUser.html
+++ b/formUser.html
@@ -40,7 +40,7 @@
                 <h1 class="title josefinsans-normal-black-30px text-center py-5">Completa tu perfil</h1>
                 <div class="d-flex justify-content-center align-content-center align-items-center">
                     <form action="" method="" id="form-user">
-                        <div class="base-form d-flex flex-column justify-content-center">
+                        <!-- <div class="base-form d-flex flex-column justify-content-center">
                             <label for="inputBirthDate"
                                 class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuándo
                                 naciste?
@@ -48,7 +48,7 @@
                             <input type="text"
                                 class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue datepicker"
                                 placeholder="Fecha de nacimiento" id="birthdate">
-                        </div>
+                        </div> -->
                         <br>
                         <div class="base-form d-flex flex-column justify-content-center">
                             <label for="inputPhone"
